Adding PWA support

--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="App"></div>
+    <noscript>
+      <h3>This App needs JavaScript to work.</h3>
+    </noscript>
   </body>
 </html>
